.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0a3 - Unreleased
------------------

- Changed the default profile metadata version to 4003, to follow our own best
  practices of distinguishing between profile and software versions.
  [hannosch]

- Added ``Plone site`` back to the all_meta_types list and revert change that
  made the site object not copyable. These prevented Plone sites from being
  imported from zexp files.
  [hannosch]

- Do not display the author contact form when the author has no email
  (for example for openid users).  Refs #8707.
  [maurits]

- Only specify icon_expr in factory type info; not also content_icon which
  has been deprecated in CMF 2.2.
  [davisagli]

- Optimize RSS template and make it work for items without a getText method.
  This closes http://dev.plone.org/plone/ticket/9696.
  [hannosch]

- Define encoding for RSS feeds. This closes
  http://dev.plone.org/plone/ticket/3506.
  [hannosch]

- On author.cpt, only display the "log in to add comments" button if mailhost
  is defined. Only show the mailhost warning if user is authenticated.
  [esteele]

- Adjusted rss_template to work for content items without an effective date
  and include issued and modified tags. Thanks for the patch anthonygerrard.
  This closes http://dev.plone.org/plone/ticket/7952.
  [hannosch]

4.0a2 - 2009-12-03
------------------

- Restore the ability to add Plone sites within ZODB mountpoints (and other
  OFS folders).
  [davisagli]

- Move prefs_navigation_form to plone.app.controlpanel as 
  @@navigation-controlpanel. The form and its cpy script have been deprecated.
  [esteele]

- Use the @@plone-upgrade view as the default management screen for the
  migration tool.
  [davisagli]

- Respect multibyte language delimiter in search field. This closes
  http://dev.plone.org/plone/ticket/9422.
  [hannosch]
