@@ -143,7 +143,7 @@
         </h2>
 
         <ul>
-            <li>Plone <span tal:replace="mt/getInstanceVersion" /></li>
+            <li>Plone <span tal:replace="mt/getSoftwareVersion" /></li>
             <li>Zope <span tal:replace="sys/Zope" /></li>
             <li>Python <span tal:replace="sys/Python" /></li>
         </ul>
